# a301_extras

./: .gitignore  LICENSE  Readme.md  conf.py  doit.sh  full_listing.rst  index.rst  print_version.py  pyproject.toml  requirements.txt  test_imports.py
notebooks/week10/: read_landsat_ee.ipynb
notebooks/week11/: derived_stability_index.ipynb  earthcare_to_xarray.ipynb  plot_earthcare.ipynb
src/: __init__.py  add_test.py  test.py  trial.py
src/a301_extras/: __init__.py  sat_lib.py  thermo_utils.py
src/a301_plots/: __init__.py  plot_utils.py
src/a301_thermo/: __init__.py  thermo_utils.py
