[build-system]
requires = [
    "setuptools >= 48",
    "setuptools_scm[toml] >= 4, <6",
    "setuptools_scm_git_archive",
    "wheel >= 0.29.0"
]
build-backend = 'setuptools.build_meta'


[project]
name = "a301_extras"
description = "a301 satellite code"
authors = [
  { name="Philip Austin", email="paustin@eoas.ubc.ca" },
]
dynamic = ["version"]   

[tool.setuptools_scm]
write_to = "src/_version.py"









































