[build-system]
requires = [
    "setuptools >= 48",
    "setuptools_scm[toml] >= 4, <6",
    "setuptools_scm_git_archive",
    "wheel >= 0.29.0"
]
build-backend = 'setuptools.build_meta'


[project]
name = "a301_extras"
description = "a301 code"
authors = [
  { name="Philip Austin", email="paustin@eoas.ubc.ca" },
]
dynamic = ["version"]   

dependencies = [
    "xarray",
    "numpy",
    "matplotlib",
    "pyproj"
]

[tool.setuptools_scm]
write_to = "src/a301_extras/_version.py"
root = "."








































